# slack-cli

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.en.md  README.md  codecov.yml  deny.toml  install.sh  release-plz.toml  uninstall.sh
.claude/skills/slack-workspace/: SKILL.md
.config/: nextest.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  lint.yml  release-plz.yml  release.yml  supply-chain.yml
scripts/: install.sh  uninstall.sh
src/: cli.rs  config.rs  format.rs  lib.rs  main.rs
src/auth/: CLAUDE.md  authenticator.rs  cli_handler.rs  env.rs  errors.rs  method.rs  mod.rs  policy.rs  profile.rs  secret.rs  state.rs  store.rs
src/auth/login/: mod.rs  pkce_login.rs  static_login.rs
src/auth/oauth/: browser.rs  callback.rs  exchange.rs  flow.rs  mod.rs  pkce.rs  scopes.rs
src/cache/: CLAUDE.md  background.rs  channels.rs  constants.rs  error.rs  helpers.rs  locks.rs  mod.rs  schema.rs  sqlite_cache.rs  users.rs
src/slack/: CLAUDE.md  api_config.rs  auth.rs  bookmarks.rs  channels.rs  client.rs  core.rs  emoji.rs  error.rs  messages.rs  mod.rs  pins.rs  reactions.rs  search.rs  types.rs  users.rs
tests/: messages_api.rs  oauth_pkce_flow.rs
tests/fixtures/: mock_channels.rs  mock_messages.rs  mock_users.rs  mod.rs
tests/helpers/: mock_slack_api.rs  mod.rs  test_cache.rs
