[package]
name = "slack-cli"
version = "0.4.1"
edition = "2024"
rust-version = "1.95.0"
authors = ["Slack CLI Contributors"]
description = "Fast Slack CLI with FTS5 cache and local search"
license = "MIT"
repository = "https://github.com/junyeong-ai/slack-cli"
homepage = "https://github.com/junyeong-ai/slack-cli"
keywords = ["slack", "cli", "api", "cache", "search"]
categories = ["command-line-utilities", "api-bindings"]
readme = "README.md"
include = [
    "/src/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/README.en.md",
    "/rust-toolchain.toml",
]

[lib]
name = "slack_cli"
path = "src/lib.rs"

[[bin]]
name = "slack-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
tokio = { version = "1.52", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
rusqlite = { version = "0.39", features = ["bundled", "chrono", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.33"
anyhow = "1.0"
thiserror = "2.0"
governor = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.52", default-features = false, features = ["full", "test-util"] }
rstest = "0.26"
tempfile = "3.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
